[package]
name = "native"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "godot_rapier3d"
crate-type = ["cdylib"]

[dependencies]
rapier3d = { version = "*", features = ["simd-nightly"] }
gdnative = "*"
lazy_static = "*"

[build-dependencies]
json = "*"
quote = "*"
proc-macro2 = "*"

[profile.dev.package."*"]
opt-level = 3
