[package]
name = "godot_rapier3d"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"

[lib]
name = "godot_rapier3d"

[dependencies]
rapier3d = { version = "*", features = ["simd-nightly"] }
gdnative = "*"
lazy_static = "*"

[build-dependencies]
json = "*"
quote = "*"
proc-macro2 = "*"
