[package]
name = "godot_rapier3d"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"

[lib]
name = "godot_rapier3d"

[dependencies]
rapier3d = { git = "https://github.com/Demindiro/rapier", branch = "godot-0.9", version = "*", features = ["simd-nightly"] }
gdnative = "*"
lazy_static = "*"

[build-dependencies]
json = "*"
quote = "*"
proc-macro2 = "*"
